--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "audiophile-v2",
   "version": "0.1.0",
   "private": true,
-  
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "prisma generate && next build",
@@ -26,7 +25,8 @@
     "react-dom": "^19.0.0",
     "svix": "^1.61.4",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
