--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.477.0",
     "next": "15.2.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.3",
     "svix": "^1.61.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
