--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "svix": "^1.61.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
